fix menu spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,6 +388,11 @@ a:hover {
 
 }
 
+#hamburgerMenuList {
+	position: relative;
+	top: 25%;
+}
+
 
 
 /*Footer*/
